Closed
Bug 503364
Opened 14 years ago
Closed 14 years ago
[FIX]GetAbsoluteContainingBlock messes up abs pos tables
Categories
(Core :: Layout, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: bzbarsky, Assigned: bzbarsky)
References
Details
Attachments
(1 file)
4.02 KB,
patch
|
roc
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
This is a regression from bug 478811 caused by the fact that IsTableRelated() is currently false for the outer table frame type. That's wrong. Fix plus tests coming up; some of them fail without this patch.
![]() |
Assignee | |
Comment 1•14 years ago
|
||
Attachment #387700 -
Flags: superreview?(roc)
Attachment #387700 -
Flags: review?(roc)
Attachment #387700 -
Flags: superreview?(roc)
Attachment #387700 -
Flags: superreview+
Attachment #387700 -
Flags: review?(roc)
Attachment #387700 -
Flags: review+
![]() |
Assignee | |
Comment 2•14 years ago
|
||
Pushed http://hg.mozilla.org/mozilla-central/rev/b647d5d2ed93
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•