Bug 503364.  Make GetAbsoluteContainingBlock work correctly for abs pos table ancestors again.  r+sr=roc